@@ -1,3 +1,8 @@
+2011-09-12  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* src/dlvhex/State.cpp: Fixing bug in changeState().
+	* src/dlvhex/valgrinddlvhex.sh: Showing more backtrace levels.
+
 2011-09-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* testsuite/TestHexParserModule.cpp: Use MLPSyntaxChecker instead
